--- a/server/.env.example
+++ b/server/.env.example
@@ -20,6 +20,8 @@ GOOGLE_CALLBACK_URL=http://localhost:8080/auth/google/callback
 
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USER=neevamodi@gmail.com
+MAIL_USER=your_email@gmail.com
 MAIL_PASS=done
-MAIL_FROM="Badminton Court Management System <neevamodi@gmail.com>"
+MAIL_FROM="Badminton Court Management System <your_email@gmail.com>"
+
+APP_ORIGIN=http://localhost:5173
