Remaining : AdminAudit and bit of AdminBooking

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,5 @@
 PORT=8080
 NODE_ENV=development
-APP_ORIGIN=http://localhost:5173
 
 # Postgres
 PGHOST=localhost
@@ -25,3 +24,6 @@ MAIL_PASS=done
 MAIL_FROM="Badminton Court Management System <your_email@gmail.com>"
 
 APP_ORIGIN=http://localhost:5173
+API_ORIGIN=http://localhost:8080         # Express backend base URL (used in email link)
+
+APP_SIGNING_SECRET=some_secret
